packages/documentation/src/stories/foundations/icons/search/search-icons.styles.scss
@use '@swisspost/design-system-styles/core' as post;
@use '@swisspost/design-system-styles/functions/tokens';
@use '@swisspost/design-system-styles/tokens/utilities';

tokens.$default-map: utilities.$post-spacing;

.search-form {
  margin-block-start: tokens.get('utility-gap-32');

  .sets {
    margin-inline: auto;
    max-width: 80%;

    @include post.max('md') {
      max-width: 300px;
    }
  }

  .search-text {
    margin-block: tokens.get('utility-gap-64') tokens.get('utility-gap-48');
    margin-inline: auto;
    max-width: 400px;
  }
}

.search-results {
  margin-block-start: tokens.get('utility-gap-48');

  .no-results {
    text-align: center;

    post-icon {
      font-size: 3rem;
    }
  }

  .result-list {
    @include post.list-unstyled();
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: center;
    gap: tokens.get('utility-gap-16');
    margin-block: tokens.get('utility-gap-24');

    @include post.min('sm') {
      grid-template-columns: repeat(3, 1fr);
    }

    @include post.min('md') {
      grid-template-columns: repeat(4, 1fr);
    }

    @include post.min('lg') {
      grid-template-columns: repeat(6, 1fr);
    }

    .icon {
      border: 1px solid post.$gray-20;
      border-radius: post.$border-radius;

      > button {
        padding: tokens.get('utility-gap-16') 0.5rem 0.5rem;
        width: 100%;
        background-color: transparent;
        border: none;
      }

      .gfx {
        display: flex;
        justify-content: center;
        height: tokens.get('utility-gap-32');
        font-size: tokens.get('utility-gap-32');
      }

      .name {
        display: block;
        margin-block-start: tokens.get('utility-gap-16');
        font-weight: bold;
        font-size: 0.875rem;
        text-align: center;
        hyphens: auto;
      }
    }
  }

  .paging {
    display: flex;
    justify-content: center;

    ul {
      @include post.list-inline();
    }
  }
}

.icon-panel {
  margin: 0 0 0 auto;

  > div {
    height: 100vh;
    max-width: 350px;
    border: 0;
    padding: 2rem 1rem 1rem 1rem;
    border-left: 1px solid #e1e0dc;
    overflow-y: auto;
  }

  .icon-panel-content {
    display: flex;
    align-items: flex-start;
  }

  .resizer-container {
    width: 100px;
    height: 100px;
    margin: 0 auto 1rem;
  }

  dl {
    font-size: 1rem;

    dt,
    dd {
      margin-bottom: 0.5rem;
    }

    dt {
      font-weight: 700;
    }
  }
}

